--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -66,6 +66,7 @@
  
 \section{Working GPS}
 Please refer to the delivered code.
+We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations.
 
 \section{Diagram}
 
@@ -73,6 +74,57 @@ Please refer to the delivered code.
 Our third puzzle is Sudoku, we have however modified the rules a bit because it makes it easier to implement and we feel that this modification fits the scheme of a scaling constraint satisfaction problem better.\\
 The difference between this and the normal Sudoku is the fact that the normal sudoku is usually a board of 3x3 numbered grids (with numbers ranging from and including 1 to and including 9), and the board is pre-filled with some numbers already, these numbers are not allowed to be changed whatsoever.\\
 Our modified version starts out with an empty board, follows the same basic rules as the normal Sudoku but we just fill the board in an arbitrary pattern and modify a complete "solution" untill we find one solution that doesn't violate the constraints. We do this by randomly filling each "square" with numbers from 1 to k*k (for instance 1-9 for k=3 - which is the normal sudoku size found in newspapers). We then only swap numbers inside each "square", thus we need only consider conflicts on the rows and columns as the numbers inside each square already meet the contraint that only one of each number may be inside each square. This modified version makes it easy to create scaling problems, as we can simply increase $k$ and make bigger boards, thus making it much more complex and  computationally harder.
+
+To evaluate the board at a given time, we tally up the number of conflicts for each position with their corresponding column and row, and update a totalCount of all the conflicts.
+
+For example if the board looks like this:
+
+\begin{verbatim}
+
+The board
+
+ 3  4  9     1  5  7     2  8  7 
+ 6  7  5     3  9  4     4  9  6 
+ 8  1  2     8  2  6     3  5  1 
+
+ 7  8  9     9  1  4     1  3  4 
+ 3  5  4     8  6  7     2  6  8 
+ 6  1  2     2  3  5     7  9  5 
+
+ 8  4  9     3  1  5     7  6  3 
+ 7  6  2     6  7  2     5  1  8 
+ 5  1  3     9  4  8     9  4  2 
+
+\end{verbatim}
+
+Then we have a conflict matrix and a totalCount that looks like this:
+
+\begin{verbatim}
+
+Num of conflicts in total: 92
+
+
+1 1 2 	0 0 2 	1 0 1 
+2 0 0 	1 1 2 	1 2 1 
+2 3 3 	2 1 0 	0 0 1 
+
+1 0 3 	2 2 2 	1 0 1 
+1 0 0 	2 1 1 	1 2 2 
+1 2 3 	1 0 2 	1 1 1 
+
+1 1 2 	2 1 1 	1 1 1 
+2 1 3 	1 1 1 	0 0 1 
+0 2 0 	2 1 0 	1 1 0 
+
+\end{verbatim}
+
+We can for example look at the number 6 in the top leftmost square (pos(1,0)) and see that the conflict matrix states that it has 2 conflicting 6s in total, we can easily verify this by finding the 6 on the same row in the top rightmost square (pos(1,8)), and the 6 on the same column that is located in the middle leftmost
+square (pos(5,0)).
+
+In SA this information is enough to deduce the objective function as need only count the conflicts on the board and give an appropriate value to such a state. 
+However in Minimum-Conflicts we can use this information more intelligently and look at the conflict matrix to see where we can make a change (I.e each position where there are 1 or more conflicts), and then pick one of these at random. 
+
+The way we have opted to chose a neighboring state with use of Minimum-Conflicts 
 
 \section{Demonstration of K-queen}
 %Will be shown on Friday 25. October 2013.
@@ -107,17 +159,17 @@ Average iterations per run reaching a goal state: 37.25
 
 
 \section{Demonstration of Graph-color}
-Will be shown on Friday 25. October 2013.
+%Will be shown on Friday 25. October 2013.
 We have decided that number 1 is easy, 2 is medium and 3 is hard-case.  These numbers correspond to the txt file given inside the project - that is 1 corresponds to \textit{graph-color-1.txt} etc. (do note that we swapped the numbers 1 and 2 of the provided files).\\
 The first "easy" one have a 40 nodes/countries and 67 edges/countries bordering each other, the second medium one have 40 nodes and 97 edges whilst the hardest problem have 500 nodes with 1009 edges.\\
-There's included a \textit{graph-color-0.txt} which is the example text provided that told us how to interpret the data, it's not used for the problem; only for debugging and testing, the same goes for \textit{graph-color-test1.txt} file.\\ 
+%There's included a \textit{graph-color-0.txt} which is the example text provided that told us how to interpret the data, it's not used for the problem; only for debugging and testing, the same goes for \textit{graph-color-test1.txt} file.\\ 
 We decided to classify these problems as such because it is more logical that the more edges and nodes you have, the harder the problem becomes. It's also the only input we have for this problem.
 This problem is also known as vertex-coloring, which is a problem where you have to color every node with a color so that none of its neighbor have the same color.\\
 The data we got is explained here:\\ \href{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt}{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt},
 as you can see, these nodes are provided with coordinates. These coordinates are mostly there for the visual representation if needed, it's not needed for the actual problem, this is because there's no need for information \textbf{where} the nodes are located as long as we know how the edges are connected. For this task, we've decided to use a neighbor-matrix to represent the nodes and the edges, this is represented by a 2-dimensional boolean array where a \textit{True} indicates an edge between a node \textit{i} and node \textit{j} ($i \neq j$) and an int array which contains the colors of each node.
 
 \section{Result of Graph: easy-case}
-One of the runs and its results printed out, the N indicates which node we are looking at and the C tells us which color this node is. We have used numbers instead of colors because this is easier to work with.\\
+One of the runs and its results printed out, the N indicates which node we are looking at and the C tells us which color this node is. We have used numbers to represent the colors because this is easier to work with.\\
 \begin{verbatim}
 GraphManager: graph-color-1.txt
 
@@ -180,8 +232,8 @@ Average iterations per run reaching a goal state: 23.35
 
 
 \section{Demonstration of the modified Sudoku}
-Will be shown on Friday 25. October 2013.
-We have decided that k = 2 is easy case, 3 is medium, 8 is hard. 
+%Will be shown on Friday 25. October 2013.
+We have decided that k = 2 is easy case, 3 is medium, 9 is hard. 
 We have decided to use these \textit{k}s because of the runtime, the k for the hard problem runs in X minutes - which is what the assignment text wants the runtime of a hard problem to be.
 
 \section{Result of modified Sudoku: easy-case}
