--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -273,11 +273,11 @@ Final statistic for 20 runs with a maximum of 10000 iterations for min-conflict 
     Average iterations reaching goal: & 21.45& 104.95& 646.4\\
     Average iteration per run:  & 21.45 & 104.95 &  646.4\\
     Standard deviation for iterations $\sigma$ & 10.14 & 42.96 & 67.16\\
-    Fewest iteration: & 11 & 45& 493\\ 
+    Fewest iterations: & 11 & 45& 493\\ 
     Most iterations: & 59 & 191& 766\\ 
-    Number of goal reached: & 20/20 & 20/20 & 20/20\\
+    Number of goal states reached: & 20/20 & 20/20 & 20/20\\
     Total iterations: & 429 & 2099& 12928\\
-    Total iterations for goal: & 429 & 2099& 12928\\
+    Total iterations for goal states: & 429 & 2099& 12928\\
     Total time spent: & 97ms& 149ms & 9336ms\\
     \hline
   \end{tabular}
