--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -186,7 +186,6 @@ Internally the board is represented as a one dimensional matrix where each index
 [5,3,0,4,7,1,6,3]
 
 \end{verbatim}
-
 \noindent
 means that on f.ex row 0 the queen is placed on column 5. The more readable representation (the printed board) would then look like this:
 
@@ -213,13 +212,18 @@ Because we have opted to use a one dimensional matrix internally, the creation a
 \end{verbatim}
 
 \noindent
-If we randomly choose to alter the position for the queen at row 7 with Minimum Conflict we would have to check each position for the queen on that given row. For this purpose we have yet another one dimensional matrix which counts up how many conflicts the move would produce if we opted to move to a particullar column. For this row we would have the NumberOfColumnConflict matrix appearing like this:
+For SA create children where we chose one random row and move the queen on that row to a random column. The idea here is to alter the states slightly in the hope of getting closer to a goal state. 
+\\
+However if we run Minimum-Conflict, and on this iteration randomly choose to alter the position for the queen at row 7 we would have to check each position for the queen on that given row. For this purpose we have yet another one dimensional matrix which counts up how many conflicts the move would produce if we opted to move to a particullar column. For this row we would have the NumberOfColumnConflict matrix appearing like this:
 
 \begin{verbatim}
 
 [2,1,0,2,2,3,1,2]
 
 \end{verbatim}
+\noindent
+Thus the algorithm would move the queen at row 7 from column 3 to 2 and thereby reaching a goal state.
+
 
 \section{Result table of K-queens, and a description of an easy-case}
 \begin{verbatim}
